Fixed z-index issues

--- a/src/components/Layout/subcomponents/Menu/Menu.scss
+++ b/src/components/Layout/subcomponents/Menu/Menu.scss
@@ -1,5 +1,6 @@
 .container {
   all: unset;
+  z-index: 10;
   position: absolute;
   left: 0;
   top: 3rem;
